# Tactile_control_AC

./: README.md
data_collection/: CMakeLists.txt  package.xml
data_collection/franka_panda_controllers/: CMakeLists.txt  franka_panda_controllers_plugin.xml  package.xml
data_collection/franka_panda_controllers/cfg/: leader_compliance_params.cfg
data_collection/franka_panda_controllers/config/: leader_cartesian_impendance_controller.yaml
data_collection/franka_panda_controllers/include/franka_panda_controllers/: franka_leader_impendance_controller.h
data_collection/franka_panda_controllers/launch/: leader_franka_impedance_controller.launch
data_collection/franka_panda_controllers/src/: franka_leader_impendance_controller.cpp
data_collection/franka_teleoperation/launch/: data_collection.launch  data_collection_old.launch  data_collection_save.launch  franka_arm_camera.launch  franka_zero_torque.launch
data_collection/franka_teleoperation/script/: files_to_folder.py
data_collection/franka_teleoperation/src/: COLLECT_B.PY  animation.py  collect_ale.py  data_colelction_pushing.py  data_collection.py  data_collection_ALE.py  data_collection_trajectory.py  predefined_trajectory.py  pushing_dataset_collector.py  pushing_single_strawberry_dataset_collector.py  pushing_strawberry_dataset_collector.py  reading_robot_states.py  realsense_camera.py  realsense_camera_front.py  realsense_camera_hand.py  realsense_camera_tilted.py  server.py
data_collection/launch/: data_collection.launch
data_collection/python_scripts/: data_collection_ALE.py  data_collection_trajectory.py
data_collection/ws_moveit/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
data_collection/ws_moveit/devel/lib/: libchomp_motion_planner.so.1.1.11  libchomp_planner_plugin.so.1.1.11  libcollision_detector_bullet_plugin.so.1.1.11  libcollision_detector_fcl_plugin.so.1.1.11  libgeometric_shapes.so.0.7.3  libmoveit_background_processing.so.1.1.11  libmoveit_cached_ik_kinematics_base.so.1.1.11  libmoveit_cached_ik_kinematics_plugin.so.1.1.11  libmoveit_chomp_optimizer_adapter.so.1.1.11  libmoveit_collision_detection.so.1.1.11  libmoveit_collision_detection_bullet.so.1.1.11  libmoveit_collision_detection_fcl.so.1.1.11  libmoveit_collision_distance_field.so.1.1.11  libmoveit_collision_plugin_loader.so.1.1.11  libmoveit_constraint_samplers.so.1.1.11  (+78 more)
data_collection/ws_moveit/src/: .rosinstall.bak
franka_ros/: CMakeLists.txt  package.xml
franka_ros/franka_control/launch/: franka_control.launch
franka_ros/franka_example_controllers/launch/: cartesian_pose_example_controller.launch
franka_ros/franka_example_controllers/src/: cartesian_pose_example_controller_AO.cpp
franka_ros/panda_moveit_config/launch/: move_group.launch  panda_moveit.launch
haptic_finger/: CMakeLists.txt  package.xml
haptic_finger/RT-Data/proactive/: robot_pose_circular.npy
haptic_finger/haptic_finger_tcp/: server.py
haptic_finger_control/: CMakeLists.txt  ROSVideoToOpenCV.py  detecion_environment.yml  detection_env.yml  detection_prova1.py  detectron2_ros.py  detectron_inference.py  img_to_cv2_test  trajectory_adaptation.py
haptic_finger_control/RT-Data/proactive/: robot_pose.npy  robot_pose_new.npy
haptic_finger_control/force_localisation/: force_licalisation_cnn.ipynb
haptic_finger_control/haptic_finger_tcp/: server.py  server.py.save
haptic_finger_control/src/: proactive_pushing_controller.py  stem_pusher.cpp  stem_pusher_vel.cpp
strawberry_pushing_control/Finger/: import_socket.py  server_tcp.py
strawberry_pushing_control/haptic_finger_tcp/: server.py
strawberry_pushing_control/src/: proactive_pushing_controller.py
trajectory_adaptation/: CMakeLists.txt  package.xml
trajectory_adaptation/detection/: color_filterin.py  copy_file.py  detectron_inference.py  extract_centroid_from_video.py
trajectory_adaptation/python-scripts/: Real_time_MPC.py  basisfunctry.py  leggi_posizione_prova.py  no_loop.py  pushing_script.py  read_cartesian_pose.py  trajectory_adaptation.py
trajectory_adaptation/src/: cartesian_pd_controller.cpp  cartesian_pose_example_controller_AO.cpp  controller_prova.cpp
(+1344 files in other folders)
